2008-11-14  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Don't crash if
	something goes wrong with Monodoc initialization. Removed
	UpdateReferences call in Load(). This call was added to fix bug
	#427285, but this is the wrong fix. Everything seems to work fine
	without it, and it is a performance bottleneck.

2008-11-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: fixed 'Bug 444643 -
	Extension methods don't show up on array types'.

2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/ParserDatabase.cs:
	* MonoDevelop.Projects.Dom.Serialization/DatabaseProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	Modify GetSubclasses API to allow limiting by namespaces and
	disabling of deep searching. Move some 1.1 code to generics.

2008-11-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/NamespaceEntry.cs: Reduce
	string allocation.

2008-11-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/Error.cs:
	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/Comment.cs:
	* MonoDevelop.Projects.Dom/DomUsing.cs:
	* MonoDevelop.Projects.Dom/DomEvent.cs:
	* MonoDevelop.Projects.Dom/DomField.cs:
	* MonoDevelop.Projects.Dom/DomRegion.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/DomProperty.cs:
	* MonoDevelop.Projects.Dom/DomLocation.cs:
	* MonoDevelop.Projects.Dom/DomParameter.cs:
	* MonoDevelop.Projects.Dom/DomCecilType.cs:
	* MonoDevelop.Projects.Dom/DomAttribute.cs:
	* MonoDevelop.Projects.Dom/CompoundType.cs:
	* MonoDevelop.Projects.Dom/ResolveResult.cs:
	* MonoDevelop.Projects.Dom/DomCecilField.cs:
	* MonoDevelop.Projects.Dom/TypeParameter.cs:
	* MonoDevelop.Projects.Dom/DomCecilEvent.cs:
	* MonoDevelop.Projects.Dom/DomReturnType.cs: