@@ -1,5 +1,11 @@
 2008-11-14  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* MonoDevelop.Projects.Dom/DomType.cs:
+	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Load the help
+	tree asynchronously. Reduces startup time.
+
+2008-11-14  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Don't crash if
 	something goes wrong with Monodoc initialization. Removed
 	UpdateReferences call in Load(). This call was added to fix bug
